objects/ssot__RecruitmentPostingContentSection__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Posting Content Section Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentContentSectionId__c</fullName>
        <label>Recruitment Content Section</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingId__c</fullName>
        <label>Recruitment Posting</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366702632_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentPostingContentSection_Rec_rel</label>
        <referenceTo>ssot__RecruitmentPosting__dlm</referenceTo>
        <relationshipLabel>RecruitmentPostingContentSection_Rec_rel</relationshipLabel>
        <relationshipName>rel_1727366702632_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366708703_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentPostingContentSection_Rec_rel</label>
        <referenceTo>ssot__RecruitmentContentSection__dlm</referenceTo>
        <relationshipLabel>RecruitmentPostingContentSection_Rec_rel</relationshipLabel>
        <relationshipName>rel_1727366708703_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>